HUB-332: add min-width to avoid text-overflows
HUB-332(Minimal responsive design)

--- a/ui/css/grid/modern-grid.css
+++ b/ui/css/grid/modern-grid.css
@@ -32,6 +32,7 @@
 header,
 section,
 footer {
+  min-width: var(--grid-min-width);
   padding-left: calc(3 * var(--grid-gap-width));
   padding-right: calc(3 * var(--grid-gap-width));
 }
